<resources>
    <string name="app_name">TestBed</string>
    <string name="simple_debugging_sample">Simple debugging sample</string>
    <string name="logcat_sample">Logcat sample</string>
    <string name="start_log_d">Start Log.d</string>
    <string name="start_log_i">Start Log.i</string>
    <string name="start_log_w">Start Log.w</string>
    <string name="start_log_e">Start Log.e</string>
    <string name="start_log_v">Start Log.v</string>
    <string name="start_timber_d">Start Timber.d</string>
    <string name="start_timber_i">Start Timber.i</string>
    <string name="start_timber_w">Start Timber.w</string>
    <string name="start_timber_e">Start Timber.e</string>
    <string name="start_timber_v">Start Timber.v</string>
    <string name="name">Name</string>
    <string name="price">price</string>
    <string name="save_expense">Save expense</string>
    <string name="expense_sample">Expense sample</string>
    <string name="dog_sample">Dog sample</string>
    <string name="sample_button">Sample Buttom</string>
    <string name="memory_leak_sample">Memory Leak Sample</string>
    <string name="transit_next">Transit to next fragment</string>
</resources>
